--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>QR Attendance System</title>
     <script>
         // Store Location (Latitude, Longitude)
-        const storeLatitude = 28.7041; // Replace with your store's latitude
-        const storeLongitude = 77.1025; // Replace with your store's longitude
+        const storeLatitude = 28.2230426; // Replace with your store's latitude
+        const storeLongitude = 77.0990377; // Replace with your store's longitude
         const allowedRadius = 50; // Allowed distance in meters
 
         // Function to calculate distance using Haversine formula
