--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>QR Attendance System</title>
     <script>
         // Store Location (Latitude, Longitude)
-        const storeLatitude = 28.2230426; // Replace with your store's latitude
-        const storeLongitude = 77.0990377; // Replace with your store's longitude
-        const allowedRadius = 50; // Allowed distance in meters
+        const storeLatitude = 28.223030; // Replace with your store's latitude
+        const storeLongitude =77.099039; // Replace with your store's longitude
+        const allowedRadius = 1566666550; // Allowed distance in meters
 
         // Function to calculate distance using Haversine formula
         function getDistance(lat1, lon1, lat2, lon2) {
