--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         // Store Location (Latitude, Longitude)
         const storeLatitude = 28.223030; // Replace with your store's latitude
         const storeLongitude =77.099039; // Replace with your store's longitude
-        const allowedRadius = 1566666550; // Allowed distance in meters
+        const allowedRadius = 100; // Allowed distance in meters
 
         // Function to calculate distance using Haversine formula
         function getDistance(lat1, lon1, lat2, lon2) {
