--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
         // Store Location (Latitude, Longitude)
         const storeLatitude = 28.4670806; // Replace with your store's latitude
-        const storeLongitude 77.0811500; // Replace with your store's longitude
+        const storeLongitude=77.0811500; // Replace with your store's longitude
         const allowedRadius = 100; // Allowed distance in meters
 
         // Function to calculate distance using Haversine formula
