--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>QR Attendance System</title>
     <script>
         // Store Location (Latitude, Longitude)
-        const storeLatitude = 28.4670806; // Replace with your store's latitude
-        const storeLongitude=77.0811500; // Replace with your store's longitude
+        const storeLatitude = 28.467152; // Replace with your store's latitude
+        const storeLongitude= 77.081427; // Replace with your store's longitude
         const allowedRadius = 100; // Allowed distance in meters
 
         // Function to calculate distance using Haversine formula
