--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         function sendDataToGoogleSheets(lat, lng, status) {
-            const scriptURL = 'https://docs.google.com/spreadsheets/d/12Cl70yjhkFa3yiIxMRHzWAh0Ho87cFOz68iay9WhFvw/edit';
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbwGR1ExXmclcSuTyIf0ROFsbuTLmnA6guOowAyhfD_xbuJ6MBZ2t8DXXaF13fubEVQ/exec';
             fetch(scriptURL, {
                 method: 'POST',
                 body: JSON.stringify({latitude: lat, longitude: lng, access_status: status}),
