--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <h2>Store Access System</h2>
     <p id="status">Checking location...</p>
     <p id="confirmation" style="color: green; display: none;">Data Sent Successfully!</p>
-    <p id="error" style="color: red; display: none;">Error sending data!</p>
-
     <script>
         const storeLat = 28.22315741881459;
         const storeLng = 77.09913041100037;
@@ -32,11 +30,7 @@
             const userLat = position.coords.latitude;
             const userLng = position.coords.longitude;
             const distance = getDistanceFromLatLonInM(userLat, userLng, storeLat, storeLng);
-
-            console.log("User Latitude:", userLat);
-            console.log("User Longitude:", userLng);
-            console.log("Distance from Store:", distance);
-
+            
             if (distance <= accessRadius) {
                 document.getElementById("status").innerText = "Access Granted";
                 sendDataToGoogleSheets(userLat, userLng, "Granted");
@@ -47,24 +41,24 @@
         }
 
         function sendDataToGoogleSheets(lat, lng, status) {
-            const scriptURL = 'https://script.google.com/macros/s/AKfycbxNBLf3hRxvcCvl_7lfFF_HJ_tBXzmO1PzdQrLrH7kZClf1qXscyh8lzByQjD46FFE/exec';
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbwyL9MBFh2ME4aryI__4bqmlxW8M2h4o1EfZDpEYFjQVV3hpuppaqjyVnpYDgOf4qgJ/exec';
+            
             fetch(scriptURL, {
                 method: 'POST',
                 body: JSON.stringify({latitude: lat, longitude: lng, access_status: status}),
                 headers: { 'Content-Type': 'application/json' }
-            })
-            .then(response => response.text()) 
+            }).then(response => response.text())
             .then(data => {
                 console.log("Server Response:", data);
                 if (data.includes("Success")) {
                     document.getElementById("confirmation").style.display = "block";
                 } else {
-                    document.getElementById("error").style.display = "block";
+                    document.getElementById("status").innerText = "Error sending data: " + data;
                 }
             })
             .catch(error => {
                 console.error('Error:', error);
-                document.getElementById("error").style.display = "block";
+                document.getElementById("status").innerText = "Fetch error: " + error;
             });
         }
 
