--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     const longitude = position.coords.longitude;
                     const farmakoLatitude = 28.22315741881459;
                     const farmakoLongitude = 77.09913041100037;
-                    const radius = 200;
+                    const radius = 2000000000000000000000;
                     
                     const distance = getDistanceFromLatLonInMeters(latitude, longitude, farmakoLatitude, farmakoLongitude);
                     
